--- a/src/main/resources/Templates/reviewsTemplate.html
+++ b/src/main/resources/Templates/reviewsTemplate.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <title>A List of All Reviews</title>
 </head>
 <body>
-$END$
+
+<header>
+    <h1>A List of All Reviews</h1>
+</header>
+
+<main>
+    <ul>
+        <li th:each="review: ${reviewsModel}"><a th:href="@{/review(id=${review.id})}" th:text="${review.title}"></a></li>
+    </ul>
+</main>
+
+<footer>
+    <small>&copy dane design</small>
+</footer>
 </body>
 </html>
